# noether

./: dependencies_ros_kinetic.rosinstall
.github/workflows/: docker.yml  ubuntu.yml
docker/: Dockerfile
docs/: doxygen.dox
noether_gui/: CMakeLists.txt  package.xml
noether_gui/include/noether_gui/: plugin_interface.h  utils.h
noether_gui/include/noether_gui/widgets/: collapsible_area_widget.h  plane_slicer_raster_planner_widget.h  raster_planner_widget.h  tpp_widget.h
noether_gui/include/noether_gui/widgets/mesh_modifiers/: euclidean_clustering_modifier_widget.h  fill_holes_modifier_widget.h  normal_estimation_pcl_widget.h  normals_from_mesh_faces_modifier_widget.h
noether_gui/include/noether_gui/widgets/tool_path_modifiers/: biased_tool_drag_orientation_modifier_widget.h  circular_lead_in_modifier_widget.h  circular_lead_out_modifier_widget.h  tool_drag_orientation_modifier_widget.h  uniform_spacing_linear_modifier_widget.h  uniform_spacing_spline_modifier_widget.h
noether_gui/include/noether_gui/widgets/tool_path_planners/edge/: boundary_edge_planner_widget.h
noether_gui/include/noether_gui/widgets/tool_path_planners/raster/: cross_hatch_plane_slicer_raster_planner_widget.h  plane_slicer_raster_planner_widget.h  raster_planner_widget.h
noether_gui/include/noether_gui/widgets/tool_path_planners/raster/direction_generators/: principal_axis_direction_generator_widget.h
noether_gui/src/: plugin_interface.cpp  plugins.cpp
noether_gui/src/widgets/: collapsible_area_widget.cpp  configurable_tpp_pipeline_widget.cpp  plane_slicer_raster_planner_widget.cpp  raster_planner_widget.cpp  tpp_pipeline_widget.cpp  tpp_widget.cpp
noether_gui/src/widgets/mesh_modifiers/: ransac_cylinder_fit_modifier_widget.ui
noether_gui/src/widgets/tool_path_modifiers/: biased_tool_drag_orientation_modifier_widget.cpp  circular_lead_in_modifier_widget.cpp  circular_lead_out_modifier_widget.cpp  linear_approach_modifier_widget.cpp  tool_drag_orientation_modifier_widget.cpp
noether_gui/src/widgets/tool_path_planners/raster/: cross_hatch_plane_slicer_raster_planner.cpp
noether_gui/src/widgets/tool_path_planners/raster/direction_generators/: principal_axis_direction_generator_widget.cpp
noether_gui/ui/: tpp_widget.ui
noether_tpp/: CMakeLists.txt
noether_tpp/include/noether_tpp/: plugin_interface.h  utils.h
noether_tpp/src/: plugins.cpp  utils.cpp
noether_tpp/src/core/: tool_path_planner_pipeline.cpp
noether_tpp/src/mesh_modifiers/: plane_projection_modifier.cpp
noether_tpp/src/tool_path_modifiers/: organization_modifiers.cpp  waypoint_orientation_modifiers.cpp
noether_tpp/src/tool_path_planners/: origin_generators.cpp  plane_slicer_raster_planner.cpp  raster_planner.cpp
noether_tpp/test/: CMakeLists.txt
tool_path_planner/src/: plane_slicer_raster_generator.cpp  surface_walk_raster_generator.cpp  utilities.cpp
(+10 files in other folders)
